fixed page cut off

--- a/UJBUZZ/stylem.css
+++ b/UJBUZZ/stylem.css
@@ -15,7 +15,7 @@ body {
 
 .flipbook {
     width: 360px;
-    height: 510px; 
+    height: 500px; 
     max-width: 100vw;
     max-height: 100vh;
 }
@@ -39,7 +39,6 @@ body {
 }
 
 .page img{
-	width: 100%;
 	height: auto;
 	object-fit: fill; 
 	margin: 0; 
